[package]
name = "volantino"
version = "0.1.0"
authors = ["Enrico Stano <ocirne.onats@gmail.com>"]

[dependencies]
clap = "~2.32"
reqwest = "0.8.5"
select = "0.4.2"
serde_json = "1.0"

[replace]
"github-rs:0.6.1" = { git = 'https://github.com/mgattozzi/github-rs' }

[dependencies.github-rs]
version = "0.6.1"
default-features = false
features = ["rust-native-tls"]
